ajout instructions lancement sur linux